src/main/java/io/reativ/samples/springauthenticationtoken/core/http/responses/errors/InternalServerErrorResponse.java
package io.reativ.samples.springauthenticationtoken.core.http.responses.errors;

public class InternalServerErrorResponse extends AbstractErrorResponse {

    public InternalServerErrorResponse(String message) {
        super(500, "Internal Server Error", message);
    }
}
